--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turistička agencija</title>
+    <meta name="description" content="Turistička agencija - putujte s nama po celom svetu! 
+     Ponuda putovanja i destinacija kao što su Budimpešta, Beč, Istanbul, Temišvar, Zanzibar i Madrid. Pronađite idealnu avanturu za vaš odmor.">
+    <meta name="keywords" content="turistička agencija, putovanja, putovanja svetom, Budimpešta, Beč, Istanbul, Temišvar, Zanzibar, Madrid, 
+    turističke ture, aranžmani, odmori">
+    <meta name="author" content="Ognjen Tatarski">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -27,7 +33,7 @@
       <div>
         <img class="hero" src="./img/hero.jfif" alt="hero" />
       </div>
-      <h1>Turistička agencija</h1>
+      <h1>Turistička agencija - putovanja širom sveta</h1>
       <h3>Putujte s nama po celom svetu!</h3>
       <h4>Božićni vašari:</h4>
       <div class="vasari">
@@ -41,7 +47,7 @@
         </div>
       </div>
       <div class="ponuda">
-        <h2>Ponuda za decembar</h2>
+        <h2>Ponuda putovanja za decembar</h2>
         <ul>
           <li>Istanbul - 24.12.2025.</li>
           <li>Temišvar - 18.12.2025.</li>
@@ -54,3 +60,4 @@
     <footer>&copy; Ognjen Tatarski</footer>
   </body>
 </html>
+
