--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     turističke ture, aranžmani, odmori">
     <meta name="author" content="Ognjen Tatarski">
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -61,5 +61,6 @@
     <footer>&copy; Ognjen Tatarski</footer>
   </body>
 </html>
+
 
 
