--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       </nav>
     </header>
     <main>
+      <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
       <div>
         <img class="hero" src="./img/hero.jfif" alt="hero" />
       </div>
@@ -61,6 +63,7 @@
     <footer>&copy; Ognjen Tatarski</footer>
   </body>
 </html>
+
 
 
 
