--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
       </nav>
     </header>
     <main>
-      <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
-      <div>
         <img class="hero" src="./img/hero.jfif" alt="hero" />
       </div>
+        <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v24.0&appId=APP_ID"></script>
+      <div>
+        <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
       <h1>Turistička agencija - putovanja širom sveta</h1>
       <h3>Putujte s nama po celom svetu!</h3>
       <h4>Božićni vašari:</h4>
@@ -63,6 +64,7 @@
     <footer>&copy; Ognjen Tatarski</footer>
   </body>
 </html>
+
 
 
 
