--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     turističke ture, aranžmani, odmori">
     <meta name="author" content="Ognjen Tatarski">
     <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Turistička agencija – Putovanja širom sveta">
+<meta property="og:description" content="Putujte s nama po celom svetu! Otkrijte turističke destinacije kao što su Budimpešta, Beč, Istanbul, Temišvar, Zanzibar i Madrid. Vaša sledeća avantura počinje ovde.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ognjen1231.github.io/putovanja/index.html">
+<meta property="og:image" content="https://ognjen1231.github.io/putovanja/img/budimpesta.jpg">
+<meta property="og:site_name" content="Putovanja">
+
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
@@ -65,6 +72,7 @@
     <footer>&copy; Ognjen Tatarski</footer>
   </body>
 </html>
+
 
 
 
