--- a/kontakt.html
+++ b/kontakt.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turistička agencija</title>
+        <meta name="description" content="Turistička agencija - putujte s nama po celom svetu! 
+     Ponuda putovanja i destinacija kao što su Budimpešta, Beč, Istanbul, Temišvar, Zanzibar i Madrid. Pronađite idealnu avanturu za vaš odmor.">
+    <meta name="keywords" content="turistička agencija, putovanja, putovanja svetom, Budimpešta, Beč, Istanbul, Temišvar, Zanzibar, Madrid, 
+    turističke ture, aranžmani, odmori">
+    <meta name="author" content="Ognjen Tatarski">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Turistička agencija – Putovanja širom sveta">
+<meta property="og:description" content="Putujte s nama po celom svetu! Otkrijte turističke destinacije kao što su Budimpešta, Beč, Istanbul, Temišvar, Zanzibar i Madrid. Vaša sledeća avantura počinje ovde.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ognjen1231.github.io/putovanja/index.html">
+<meta property="og:image" content="https://ognjen1231.github.io/putovanja/img/budimpesta.jpg">
+<meta property="og:site_name" content="Putovanja">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -43,3 +57,4 @@
         <footer>&copy; Ognjen Tatarski</footer>
   </body>
 </html>
+
